# rust-learn

./: .env.example  Cargo.toml  README.md
goodbye/: Cargo.toml
goodbye/src/: lib.rs
hello/src/: lib.rs
hello/tests/: say_hello.rs
migrations/: 20251209145537_create_table_categories.down.sql  20251209145537_create_table_categories.up.sql
src/: database_pool.rs  main.rs  mutex_data.rs  race_condition.rs  thread_local_data.rs  try_barrier.rs  try_connection.rs  try_feature.rs  try_handlebars.rs  try_once.rs  try_serde.rs  try_using_date.rs  unit_test.rs
src/config/: application.json  application.yaml  config.rs  context_validator.rs  custom_validation.rs  log_config.yaml  mod.rs  try_log.rs
src/connection/: redis_connection.rs
src/domain/: admin.rs  blog.rs  brand.rs  category.rs  config.rs  create_category_request.rs  create_user_request.rs  database_context.rs  login_request.rs  mod.rs  person.rs  register.rs  seller.rs  user.rs  user_login_request.rs
src/repository/: brand_repository.rs  category_repository.rs  mod.rs  seller_repository.rs
templates/: blog.mustache  person.mustache  with-hello.mustache
