workspace = {members = ["hello", "goodbye"]}

[package]
name = "rust-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
hello = { path = "hello" }
goodbye = { path = "goodbye" }
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres"] }
futures = "0.3.31"
sqlx-cli = "0.8.6"
redis = { version = "1.0.1", features = ["tokio-comp"] }
dotenvy = "0.15"
